# aquarium

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: validate.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  i18n.py
backend/app/domain/: adapters.py  contracts.py  lifecycle.py  pipeline.py
backend/app/engines/graph/: native.py
backend/app/engines/persona/: native.py
backend/app/engines/report/: native.py
backend/app/engines/research/: native.py
backend/app/engines/simulation/: native.py
backend/tests/: test_api.py  test_external_adapters.py  test_pipeline_contract.py  test_real_integration_canary.py
docs/: README.md  architecture-slice-ko.md  changelog.md  quickstart-ko.md
docs/contracts/: handoff-manifest-v1.md
docs/current/: architecture.md  design.md  execution-plan.md  product.md  qa.md  release.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: i18n.messages.mjs  i18n.test.mjs  main.tsx  styles.css  vite-env.d.ts
frontend/tests/: aquarium.spec.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: run_real_integration_canary.sh
