[project]
name = "aquarium-backend"
version = "0.1.0"
description = "Aquarium local research-to-simulation backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9"
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
